@startuml Blackjack
class start{
  +play()
}
class Blackjack {

  +set()
  +action()
  +resultCalcChips()
  +showResultMessage()
}

class Deck {

  +create_deck()
}

class FirstSetting {
  +selectReset()
  +selectContinue()
  +firstDealCard()
  +getChip()
}

class ChipCaliculator {
  +resultCalcChips()
}

class CalcScore {
  +calcscore()
}



class Player_action {
  +selectHit()
  +selectStand()
  +selectDoubleDown()
  +scoreOver()
}

class CreateMessage {
  +showYourBet()
  +showYourHand()
  +showYourScore()
  +showDealerHand()
  +showDealerScore()
  +displaySelectButton()
  +showGameResult()

}

start*--Blackjack
Blackjack *-- Player_action
Blackjack *--CreateMessage
Blackjack *--CalcScore
Blackjack *--FirstSetting
Blackjack *--ChipCaliculator

FirstSetting *-- Deck

@enduml